<resources>
    <string name="app_name">BackdropsBliss</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>


    <string name="desarrollador">By Sheko</string>

    <!-- menu admin-->
    <string name="InicioAdmin">Inicio</string>
    <string name="PerfilAdmin">Perfil </string>
    <string name="RegistrarAdmin">Registrar</string>
    <string name="ListarAdmin">Lista de administradores</string>
    <string name="Salir">Cerrar sesion</string>

    <!--menu cliente-->
    <string name="Opcionestxt">Opciones</string>
    <string name="InicioCliente">Inicio</string>
    <string name="MasOpcionestxt">Mas opciones</string>
    <string name="AcercaDe">Acerca De</string>
    <string name="Administrador">Administrador</string>

    <string name="Acceder">Acceder</string>


    <!--Registro admin-->
    <string name="RegistroTXT">Registro de administradores</string>
    <string name="Correo">Email</string>
    <string name="Password">Password</string>
    <string name="Nombres">Nombres</string>
    <string name="Apellidos">Apellidos</string>
    <string name="Edad">Edad</string>
    <string name="FechaRegistro">Fecha de registro</string>
    <string name="Registrar">Registrar</string>


    <!--login admin-->
    <string name="Logintxt">Login de Administradores</string>
    <string name="Ingresar">Ingresar</string>


    <!--categorias admin-->
    <string name="fechaAdmin">--</string>
    <string name="Eligeunacategoriatxt">Elige una Categoria</string>
    <string name="BienvenidoTXT">Bienvenido(a):</string>
    <string name="NombreTXT">--</string>

    <!--categorias-->
    <string name="Peliculas">Peliculas</string>
    <string name="Series">Series</string>
    <string name="Musica">Musica</string>
    <string name="Gaming">Gaming</string>

    <string name="Agregar">Agregar</string>
    <string name="Vista">Vista</string>

    <!--peliculas-->
    <string name="NombreTXTPeliculas">Nombre de imagen</string>
    <string name="IdPeliculas">--</string>
    <string name="NombrePeliculas">Escriba nombre aqui</string>
    <string name="NombreSeries">Escriba nombre aqui</string>
    <string name="VistaPeliculas">0</string>
    <string name="PublicarPelicula">Publicar</string>
    <string name="IdSeries">--</string>

    <!--musica-->
    <string name="NombreTXTMusica">Nombre de imagen</string>
    <string name="NombreMusica">Escriba nombre aqui</string>
    <string name="IdMusica">--</string>
    <string name="VistaMusica">0</string>
    <string name="PublicarMusica">Publicar</string>


    <!--item pelicula-->
    <string name="NombreImagenPelicula"> -- </string>
    <string name="VistaPelicula"> -- </string>

    <!--item Musica-->
    <string name="NombreImagen_Musica"> -- </string>
    <string name="Vista_Musica"> -- </string>


    <!--Series-->
    <string name="NombreTXTSerie">Nombre de imagen</string>
    <string name="NombreSerie">Escriba nombre aqui</string>
    <string name="VistaSerie">0</string>
    <string name="PublicarSerie">Publicar</string>

    <!--item Seires-->
    <string name="NombreImagen_Serie"> -- </string>
    <string name="Vista_Serie"> -- </string>

    <!--videojuegos-->
    <string name="NombreTXTVideojuegos">Nombre de imagen</string>
    <string name="NombreVideojuegos">Escriba nombre aqui</string>
    <string name="IdVideojuegos">--</string>
    <string name="VistaVideojuegos">0</string>
    <string name="PublicarVideojuegos">Publicar</string>

    <string name="Nombre_VideoJuegos"> -- </string>
    <string name="Vista_VideoJuegos"> -- </string>

    <!--Dialog ordenar-->
    <string name="OrdenarTXT">Ordenar en:</string>
    <string name="Dos_Columnas">2 Columnas </string>
    <string name="Tres_Columnas">3 Columnas </string>

    <string name="PERFILADMINISTRADORTXT">MI PERFIL </string>
    <string name="MIINFORMACIONTXT">MI INFORMACION </string>
    <string name="UIDPERFILTXT">Uid: </string>
    <string name="UIDPERFIL">--- </string>
    <string name="NOMBRESPERFILTXT">Nombre:</string>
    <string name="NOMBRESPERFIL">--- </string>
    <string name="APELLIDOPERFILTXT">Apellido:</string>
    <string name="APELLIDOPERFIL">--- </string>
    <string name="CORREPPERFILTXT">Correo:</string>
    <string name="CORREPPERFIL">--- </string>
    <string name="PASWORDPERFILTXT">Password:</string>
    <string name="PASWORDPERFIL">--- </string>
    <string name="EDADPERFILTXT">Edad:</string>
    <string name="EDADPERFIL">--- </string>
    <string name="ACTUALIZARPASS">Actualizar Password</string>
    <string name="ACTUALIZARDATOS">Actualizar Datos</string>

    <!-- Cambiar contraseña-->
    <string name="MisCredencialesTXT">Mis Credenciales</string>
    <string name="PassActualTXT">Contraseña Actual</string>
    <string name="PassActual">--</string>
    <string name="ActualPassET">Contraseña Actual</string>
    <string name="NuevaPassET">Nueva Contraseña </string>
    <string name="CAMBIARPASSBTN">Cambiar Contraseña </string>
    <string name="IRINICIOBTN">Ir Inicio </string>
    <string name="NOTATXT">Nota: Si cambia la contraseña , se cerrara sesion automaticamente </string>

    <!-- Administrar item-->
    <string name="NombresADMIN">Nombres</string>
    <string name="CorreoADMIN">Correo Electronico</string>

    <string name="buscar_administrador">Buscar</string>

    <!-- Detalle admin-->
    <string name="DetalleTXT">Detalle del Admistrador </string>
    <string name="UidDetalleAdmin">UID </string>
    <string name="NombresDetalleAdmin">Nombres </string>
    <string name="ApellidosDetalleAdmin">Apellidos </string>
    <string name="CorreoDetalleAdmin">Correo </string>
    <string name="EdadDetalleAdmin">Edad </string>


    <!-- Detalle admin-->

    <string name="NombreCategoriaD"> -- </string>
    <string name="CategoriasTXT">Categorias</string>
    <string name="MasCategoriasTXT">Mas Categorias</string>
    <string name="NombreCategoriasF">--</string>

    <!-- Detalle imagen-->
    <string name="NombreImagenTXT">Nombre de imagen </string>
    <string name="NombreImagenDetalle">-- </string>
    <string name="VisualizacionTXT">Visualizaciones</string>
    <string name="VistaDetalle">--</string>

    <string name="Nombre_Cat_Elegida"> -- </string>
    <string name="Vista_Img_Cat_Elegida">--</string>


    <string name="TituloinformativoTXT">--</string>
    <string name="fecha">--</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Acerca de aplicacion-->
    <string name="AcercaDeApp">Acerca De</string>
    <string name="InfoDesarrollador">Desarrollado por: Desailly by Sheko</string>
    <string name="InfoVersion">Version: 1.0</string>
    <string name="InfoCorreo">Correo: BackdropsBliss@gmail.com</string>

    <!-- Animaciones-->
    <string name="ACTIVEPERMISOS">ACTIVE LOS PERMISOS DE ALMACENAMIENTO</string>
    <string name="OKPERMISOS">Ok</string>
    <!-- DESCARGA-->
    <string name="DESCARGAEXITOSATXT">DESCARGA EXITOSA</string>
    <string name="OKDESCARGA">OK</string>
    <!-- Establecer fondo de pantalla-->
    <string name="ESTABLECIDOTXT">Se establecio como fondo de pantalla</string>
    <string name="OKESTABLECIDO">OK</string>

    <!-- Apartado informativo-->4
    <string name="SoloadminTXT">Solo para administradores</string>

</resources>