<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    tools:context=".FragmentosAdministrador.InicioAdmin">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">




      <!--   <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="8dp">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/calendario_ico"/>

            <TextView
                android:id="@+id/fechaAdmin"
                android:text="@string/fechaAdmin"
                android:layout_marginStart="5dp"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </androidx.appcompat.widget.LinearLayoutCompat> -->

        <!--Fecha-->
        <!--bienvenida-->
     <!--   <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_gravity="center"
                android:layout_marginStart="5dp"
                android:text="@string/BienvenidoTXT"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/NombreTXT"
                android:text="@string/NombreTXT"
                android:layout_gravity="center"
                android:layout_marginStart="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </androidx.appcompat.widget.LinearLayoutCompat> -->

        <TextView
            android:text="@string/Eligeunacategoriatxt"
            android:textColor="#000"
            android:textStyle="bold"
            android:gravity="center"
            android:textSize="18sp"
            android:layout_marginTop="3dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>


        <!--fila 1 -->
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:weightSum="2">

            <!--peliculas-->
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1"
                android:gravity="center">

                <!--imagenes -->
                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="80dp"
                    android:layout_height="100dp"
                    android:src="@drawable/ico_cine"/>

                <Button
                    android:id="@+id/Peliculas"
                    android:text="@string/Peliculas"
                    android:layout_marginTop="10dp"
                    android:textColor="#fff"
                    android:background="@drawable/btn_personalizado"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </androidx.appcompat.widget.LinearLayoutCompat>


            <!--series-->
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1"
                android:gravity="center">

                <!--imagenes -->
                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="80dp"
                    android:layout_height="100dp"
                    android:src="@drawable/ico_serie"/>


                <Button
                    android:id="@+id/Series"
                    android:text="@string/Series"
                    android:layout_marginTop="10dp"
                    android:textColor="#fff"
                    android:background="@drawable/btn_personalizado"
                    android:layout_marginStart="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.appcompat.widget.LinearLayoutCompat>


        <!--fila 2 -->
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:weightSum="2">

            <!--musica-->
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1"
                android:gravity="center">


                <!--imagenes -->
                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="80dp"
                    android:layout_height="100dp"
                    android:src="@drawable/ico_music"/>

                <Button
                    android:id="@+id/Musica"
                    android:text="@string/Musica"
                    android:layout_marginTop="10dp"
                    android:textColor="#fff"
                    android:background="@drawable/btn_personalizado"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>


            </androidx.appcompat.widget.LinearLayoutCompat>

            <!--gaming-->
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1"
                android:gravity="center">

                <!--imagenes -->
                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="80dp"
                    android:layout_height="100dp"
                    android:src="@drawable/ico_gamin"/>

                <Button
                    android:id="@+id/Gaming"
                    android:text="@string/Gaming"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="5dp"
                    android:textColor="#fff"
                    android:background="@drawable/btn_personalizado"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.appcompat.widget.LinearLayoutCompat>

</ScrollView>